[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flycore"
version = "0.1.0"
description = "Simple Panda3D scene primitives"
authors = [
    { name="iPROJEKT" }
]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

dependencies = [
    "panda3d>=1.10"
]

[project.urls]
Source = "https://github.com/iPROJEKT/FlyCore"